# voronoi-generation

./: .gitignore  CMakeLists.txt  README.md  TODO.md  all_time_trials.sh  centers.txt  color_generator.py  display_results.py  distance_metric.c  distance_metric.h  foo.txt  int_array.c  int_array.h  int_matrix.c  int_matrix.h  main.c  parse.c  parse.h  results.txt  run.sh  time_trials.sh  voronoi.c  voronoi.h
examples/: centers.txt  colors.txt  large_centers.txt  med_centers.txt  oranges.txt  small_centers.txt  test_points.txt
random_centers/: all_random_centers.py  random_centers.py
scripts/: 2d_run_all.sh  backgrounds.sh  blog_content.sh  run.sh  time_trials.sh
src/: cells.c  cells.h  closest_center.c  closest_center.h  distance_metric.c  distance_metric.h  file_utils.c  file_utils.h  int_array.c  int_array.h  int_matrix.c  int_matrix.h  int_tensor.c  int_tensor.h  parse.c  parse.h  pipes.c  pipes.h  points.c  points.h  quickselect.c  quickselect.h  util.c  util.h  voronoi.c  voronoi.h  wrapper_io.c  wrapper_io.h
